Se agrego el toolbar a las actividades reglamento y contacto

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,9 @@
         <activity android:name=".MostrarBecas" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".FiltroBecasActivity" />
-        <activity android:name=".PerfilActivity"></activity>
+        <activity android:name=".PerfilActivity" />
+        <activity android:name=".ReglamentoActivity" />
+        <activity android:name=".ContactoActivity"></activity>
     </application>
 
 </manifest>
