--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
             android:screenOrientation="portrait" />
         <activity android:name=".RegisterActivity"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"
             />
         <activity android:name=".FiltroBecasActivity"
             android:screenOrientation="portrait"
