--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,57 +7,58 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:screenOrientation="portrait"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"
-            >
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".MenuPrincipal"
             android:label="@string/title_activity_menu_principal"
-            android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"
-            />
-        <activity android:name=".MostrarBecas"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MostrarBecas"
             android:screenOrientation="portrait" />
-        <activity android:name=".RegisterActivity"
-            android:screenOrientation="portrait"
-            />
-        <activity android:name=".FiltroBecasActivity"
-            android:screenOrientation="portrait"
-            />
-        <activity android:name=".PerfilActivity"
-            android:screenOrientation="portrait"
-            />
-        <activity android:name=".MostrarAnuncios"
-            android:screenOrientation="portrait"
-            >
-
-        </activity>
-        <activity android:name=".ReglamentoActivity"
-            android:screenOrientation="portrait"
-            />
-        <activity android:name=".ContactoActivity"
-            android:screenOrientation="portrait"
-            ></activity>
-
+        <activity
+            android:name=".RegisterActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".FiltroBecasActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".PerfilActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MostrarAnuncios"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ReglamentoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ContactoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".pruebaactivity"
+            android:label="@string/title_activity_pruebaactivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
